lint & format authentication service

--- a/services/authentication/package.json
+++ b/services/authentication/package.json
@@ -25,9 +25,6 @@
     "uuid": "^11.1.0"
   },
   "pnpm": {
-    "onlyBuiltDependencies": [
-      "better-sqlite3",
-      "bcrypt"
-    ]
+    "onlyBuiltDependencies": ["better-sqlite3", "bcrypt"]
   }
 }
