--- a/services/authentication/tsconfig.json
+++ b/services/authentication/tsconfig.json
@@ -1,19 +1,12 @@
 {
   "compilerOptions": {
     "target": "esnext",
-    "lib": [
-      "esnext",
-      "dom",
-      "dom.iterable",
-      "WebWorker"
-    ],
+    "lib": ["esnext", "dom", "dom.iterable", "WebWorker"],
     "useDefineForClassFields": true,
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "resolveJsonModule": true,
-    "types": [
-      "node"
-    ],
+    "types": ["node"],
     "allowImportingTsExtensions": true,
     "strict": true,
     "noImplicitAny": true,
@@ -29,8 +22,5 @@
 
     "skipLibCheck": true
   },
-  "exclude": [
-    "**/node_modules",
-    "**/dist"
-  ]
+  "exclude": ["**/node_modules", "**/dist"]
 }
