--- a/services/authentication/package.json
+++ b/services/authentication/package.json
@@ -20,9 +20,11 @@
     "bcrypt": "^5.1.1",
     "better-sqlite3": "^11.8.1",
     "fastify": "^5.2.1",
+    "fastify-type-provider-zod": "^4.0.2",
     "tsx": "^4.19.3",
     "typescript": "^5.7.3",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "zod": "^3.24.2"
   },
   "pnpm": {
     "onlyBuiltDependencies": ["better-sqlite3", "bcrypt"]
