--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,15 @@
 services:
+  nginx:
+    container_name: transcendence_nginx
+    restart: always
+    build:
+      context: frontend
+    ports:
+      - "8080:80"
+    networks:
+      - internal
+    depends_on:
+      - authentication
   authentication:
     container_name: transcendence_authentication
     restart: always
@@ -6,8 +17,6 @@ services:
       context: services/authentication
     environment:
       - JWT_SECRET="Some secret"
-    ports:
-      - "8080:8080"
     volumes:
       - auth_data:/var/authentication
     networks:
