--- a/services/game/package.json
+++ b/services/game/package.json
@@ -6,13 +6,17 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.4.1",
   "dependencies": {
-    "@fastify/static": "^8.1.1",
+    "@fastify/websocket": "^11.0.2",
+    "@types/ws": "^8.18.0",
     "fastify": "^5.2.1",
-    "tsx": "^4.19.3"
+    "tsx": "^4.19.3",
+    "typescript": "^5.8.2",
+    "ws": "^8.18.1"
   }
 }
