--- a/backend-services/package.json
+++ b/backend-services/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node src/server.ts",
-    "build": "tsc",
+    "build": "tsc -p tsconfig.json",
+    "start": "node dist/authentication/server.js",
     "test-db": "ts-node src/testDb.ts"
   },
   "repository": {
@@ -21,13 +21,14 @@
   "homepage": "https://github.com/WriteSomeStuff/Transcendence#readme",
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
-    "@types/node": "^22.15.3",
+    "@types/node": "^22.15.12",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
   "dependencies": {
     "better-sqlite3": "^11.9.1",
     "express": "^5.1.0",
+    "fastify": "^5.3.2",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   }
