--- a/backend-services/package.json
+++ b/backend-services/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "start": "node dist/authentication/server.js",
+    "start": "ts-node src/server.ts",
     "test-db": "ts-node src/testDb.ts"
   },
   "repository": {
@@ -26,9 +26,11 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "argon2": "^0.43.0",
     "better-sqlite3": "^11.9.1",
     "express": "^5.1.0",
     "fastify": "^5.3.2",
+    "fastify-type-provider-zod": "^4.0.2",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   }
