--- a/backend-services/package.json
+++ b/backend-services/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsc -p tsconfig.json && cp src/utils/initDb.sql dist/utils/initDb.sql",
     "start": "ts-node src/server.ts",
-	"clean": "rm -rf dist database.sqlite3",
+    "clean": "rm -rf dist database.sqlite3",
+	"re": "npm run clean && npm run build && npm run start",
     "test-db": "ts-node src/testDb.ts"
   },
   "repository": {
@@ -27,6 +28,8 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@fastify/formbody": "^8.0.2",
+    "@fastify/static": "^8.1.1",
     "argon2": "^0.43.0",
     "better-sqlite3": "^11.9.1",
     "express": "^5.1.0",
