--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc -p tsconfig.json && cp src/utils/initDb.sql dist/utils/initDb.sql",
-    "start": "ts-node src/server.ts",
+    "start": "node dist/server.js",
     "clean": "rm -rf dist database.sqlite3",
     "re": "npm run clean && npm run build && npm run start",
     "test-db": "ts-node src/testDb.ts"
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/WriteSomeStuff/Transcendence#readme",
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.12",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
@@ -35,6 +36,7 @@
     "express": "^5.1.0",
     "fastify": "^5.3.2",
     "fastify-type-provider-zod": "^4.0.2",
+    "jsonwebtoken": "^9.0.2",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   }
