--- a/backend/package.json
+++ b/backend/package.json
@@ -29,7 +29,9 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@fastify/cookie": "^11.0.2",
     "@fastify/formbody": "^8.0.2",
+    "@fastify/jwt": "^9.1.0",
     "@fastify/static": "^8.1.1",
     "argon2": "^0.43.0",
     "better-sqlite3": "^11.9.1",
