--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "build": "tsc -p tsconfig.json && cp src/utils/initDb.sql dist/utils/initDb.sql",
     "start": "node dist/server.js",
-    "clean": "rm -rf dist database.sqlite3",
-    "re": "npm run clean && npm run build && npm run start",
+    "re": "npm run build && npm run start",
+    "clear-db": "rm -rf dist database.sqlite3",
     "test-db": "ts-node src/testDb.ts"
   },
   "repository": {
