--- a/backend/auth-service/package.json
+++ b/backend/auth-service/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc -p tsconfig.json",
+    "start": "node dist/server.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +15,7 @@
   "dependencies": {
     "@fastify/cookie": "^11.0.2",
     "@fastify/jwt": "^9.1.0",
+    "@types/node": "^22.15.21",
     "argon2": "^0.43.0",
     "fastify": "^5.3.3",
     "fastify-type-provider-zod": "^4.0.2",
