feat: restructure auth-service and database modules
- Updated package.json in auth-service to include static file serving and database initialization script.
- Enhanced app.ts in auth-service to serve static HTML files for registration and login.
- Modified tsconfig.json in auth-service for improved module resolution and strict type checking.
- Added Dockerfile and .dockerignore for database service to facilitate containerization.
- Created package.json and package-lock.json for database service with TypeScript support.
- Implemented db.ts in database service for database connection and setup logic.
- Added initDb.sql for initializing the database schema and initDb.md for schema documentation.
- Updated tsconfig.json in database service for TypeScript configuration and output settings.

--- a/backend/database/package.json
+++ b/backend/database/package.json
@@ -1,9 +1,11 @@
 {
   "name": "database",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/db.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/db.ts",
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
@@ -13,5 +15,8 @@
     "better-sqlite3": "^11.10.0",
     "fs": "^0.0.1-security",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "typescript": "^5.8.3"
   }
 }
