--- a/backend/authentication/tsconfig.json
+++ b/backend/authentication/tsconfig.json
@@ -11,5 +11,12 @@
     "strict": true,                                      /* Enable all strict type-checking options. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
-  "exclude": ["**/node_modules", "**/dist"]
+  "include": [
+		"src",
+		"src/types"
+	],
+  "exclude": [
+		"**/node_modules",
+		"**/dist"
+	]
 }
