--- a/backend/userManagement/tsconfig.json
+++ b/backend/userManagement/tsconfig.json
@@ -4,12 +4,19 @@
     "module": "commonjs",                                /* Specify what module code is generated. */
     "rootDir": "./src",                                  /* Specify the root folder within your source files. */
     "outDir": "./dist",                                   /* Specify an output folder for all emitted files. */
-	"removeComments": true,    	                         /* Disable emitting comments. */
+		"removeComments": true,    	                         /* Disable emitting comments. */
     "esModuleInterop": true,                             /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */
     "forceConsistentCasingInFileNames": true,            /* Ensure that casing is correct in imports. */
 
     "strict": true,                                      /* Enable all strict type-checking options. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
-  "exclude": ["**/node_modules", "**/dist"]
+	"include": [
+		"src",
+		"src/types"
+	],
+  "exclude": [
+		"**/node_modules",
+		"**/dist"
+	]
 }
