--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,14 @@ services:
     env_file:
       - .env
 
+    nginx_service:
+      container_name: nginx
+      restart: always
+      build: ./frontend/nginx
+      # healthcheck:
+      ports:
+        - 8443:443
+
 networks:
   internal:
     driver: bridge
