--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,13 +37,13 @@ services:
     env_file:
       - .env
 
-  nginx_service:
-    container_name: nginx
-    restart: always
-    build: ./frontend/nginx
-    # healthcheck:
-    ports:
-      - 8443:443
+  # nginx_service:
+  #   container_name: nginx
+  #   restart: always
+  #   build: ./frontend
+  #   # healthcheck:
+  #   ports:
+  #     - 8443:443
 
 networks:
   internal:
