--- a/backend/authentication/package.json
+++ b/backend/authentication/package.json
@@ -16,6 +16,9 @@
 		"argon2": "^0.43.0",
 		"better-sqlite3": "^11.10.0",
 		"fastify": "^5.3.3",
+		"hi-base32": "^0.5.1",
+		"otpauth": "^9.4.0",
+		"qrcode": "^1.5.4",
 		"zod": "^3.25.32"
 	},
 	"devDependencies": {
