--- a/match_making/package.json
+++ b/match_making/package.json
@@ -6,7 +6,7 @@
     "build:backend": "tsc -p tsconfig.backend.json",
     "build": "npm run build:backend && npm run build:server",
     "test": "npm run build && npm run start",
-    "start": "ts-node  ./dist/serv.js"
+    "start": "node  ./dist/serv.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,7 +18,6 @@
     "fastify": "^5.3.3"
   },
   "devDependencies": {
-    "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
 }
