--- a/services/game/package.json
+++ b/services/game/package.json
@@ -1,22 +1,26 @@
 {
   "name": "game",
   "version": "1.0.0",
-  "description": "",
+  "description": "the game service",
+  "keywords": [
+    "game",
+    "microservice"
+  ],
+  "license": "MIT",
+  "author": "milana",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "type": "module",
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "packageManager": "pnpm@10.4.1",
   "dependencies": {
-    "@fastify/websocket": "^11.0.2",
-    "@types/ws": "^8.18.0",
-    "fastify": "^5.2.1",
-    "tsx": "^4.19.3",
-    "typescript": "^5.8.2",
-    "ws": "^8.18.1"
+    "@fastify/websocket": "^11.1.0",
+    "fastify": "^5.4.0"
+  },
+  "devDependencies": {
+    "@types/node": "^24.0.1",
+    "@types/ws": "^8.18.1",
+    "tsx": "^4.20.3",
+    "typescript": "^5.8.3"
   }
 }
