--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,21 +1,20 @@
 FROM node:20-alpine AS builder
 
 WORKDIR /app
-COPY ../package.json ../tsconfig.base.json ./
-COPY ../shared/pong ./shared/pong
-COPY ./ ./frontend
+COPY package.json ./
+COPY package-lock.json ./
+COPY tsconfig.base.json ./
+COPY shared ./shared
+COPY frontend ./frontend
 
-WORKDIR /app/frontend
-
-RUN corepack enable && corepack prepare --activate
-RUN npm install --production --omit=dev
-RUN npm run build
-
+RUN npm install --omit=dev
+RUN npm install typescript
+RUN npm run build -w frontend
 
 FROM nginx:alpine
 
 COPY --from=builder /app/frontend/public /usr/share/nginx/html
-COPY nginx.conf /etc/nginx/nginx.conf
+COPY frontend/nginx.conf /etc/nginx/nginx.conf
 
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
