--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,8 @@ services:
     container_name: transcendence_nginx
     restart: always
     build:
-      context: frontend
+      context: ./
+      dockerfile: frontend/Dockerfile
     ports:
       - "8080:80"
     networks:
@@ -14,7 +15,8 @@ services:
     container_name: transcendence_authentication
     restart: always
     build:
-      context: services/authentication
+      context: ./
+      dockerfile: services/authentication/Dockerfile
     environment:
       - JWT_SECRET="Some secret"
     volumes:
@@ -32,7 +34,8 @@ services:
     container_name: transcendence_routing
     restart: always
     build:
-      context: services/routing
+      context: ./
+      dockerfile: services/routing/Dockerfile
     networks:
       - internal
     healthcheck:
@@ -47,7 +50,8 @@ services:
     container_name: transcendence_matchmaking
     restart: always
     build:
-      context: services/matchmaking
+      context: ./
+      dockerfile: services/matchmaking/Dockerfile
     networks:
       - internal
     healthcheck:
@@ -61,7 +65,8 @@ services:
     container_name: transcendence_game
     restart: always
     build:
-      context: services/game
+      context: ./
+      dockerfile: services/game/Dockerfile
     networks:
       - internal
     healthcheck:
