--- a/services/authentication/package.json
+++ b/services/authentication/package.json
@@ -11,7 +11,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "npm run test"
+    "up": "npm exec tsx src/server.ts"
   },
   "dependencies": {
     "@fastify/http-proxy": "^11.2.0",
@@ -20,7 +20,8 @@
     "better-sqlite3": "^11.10.0",
     "fastify": "^5.4.0",
     "fastify-type-provider-zod": "^5.0.1",
-    "uuid": "^3.4.0",
+    "tsx": "^4.20.3",
+    "uuid": "^11.1.0",
     "zod": "^3.25.64"
   },
   "devDependencies": {
@@ -28,7 +29,6 @@
     "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^24.0.1",
     "@types/uuid": "^10.0.0",
-    "tsx": "^4.20.3",
     "typescript": "^5.8.3"
   }
 }
