--- a/services/game/package.json
+++ b/services/game/package.json
@@ -11,16 +11,16 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "up": "npm exec tsx src/server.ts"
   },
   "dependencies": {
     "@fastify/websocket": "^11.1.0",
-    "fastify": "^5.4.0"
+    "fastify": "^5.4.0",
+    "tsx": "^4.20.3"
   },
   "devDependencies": {
     "@types/node": "^24.0.1",
     "@types/ws": "^8.18.1",
-    "tsx": "^4.20.3",
     "typescript": "^5.8.3"
   }
 }
