--- a/services/routing/package.json
+++ b/services/routing/package.json
@@ -11,15 +11,15 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "up": "npm exec tsx src/server.ts"
   },
   "dependencies": {
     "@fastify/http-proxy": "^11.2.0",
-    "fastify": "^5.4.0"
+    "fastify": "^5.4.0",
+    "tsx": "^4.20.3"
   },
   "devDependencies": {
     "@types/node": "^24.0.1",
-    "tsx": "^4.20.3",
     "typescript": "^5.8.3"
   }
 }
