--- a/match_making/package.json
+++ b/match_making/package.json
@@ -15,9 +15,11 @@
     "@fastify/cookie": "^11.0.2",
     "@fastify/formbody": "^8.0.2",
     "@fastify/static": "^8.2.0",
-    "fastify": "^5.3.3"
+    "fastify": "^5.3.3",
+    "path": "^0.12.7"
   },
   "devDependencies": {
+    "@types/node": "^24.0.3",
     "typescript": "^5.8.3"
   }
 }
