--- a/shared/pong/package.json
+++ b/shared/pong/package.json
@@ -3,15 +3,13 @@
   "version": "1.0.0",
   "private": true,
   "description": "the pong game itself",
-  "keywords": [
-    "pong"
-  ],
+  "keywords": ["pong"],
   "license": "MIT",
   "author": "cat",
   "type": "module",
   "main": "src/court.ts",
   "scripts": {
-    "test": "npm run test"
+    "test": ""
   },
   "devDependencies": {}
 }
