--- a/backend/authentication/package.json
+++ b/backend/authentication/package.json
@@ -22,6 +22,7 @@
 		"zod": "^3.25.32"
 	},
 	"devDependencies": {
-		"@types/better-sqlite3": "^7.6.13"
+		"@types/better-sqlite3": "^7.6.13",
+		"@types/qrcode": "^1.5.5"
 	}
 }
