--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -17,6 +17,10 @@ server {
 		try_files $uri $uri/ =404;
 	}
 
+	location /auth/ {
+		proxy_pass http://auth_service:8080/auth/;
+	}
+
 	# location ~ \.php$ {
 	# 	include fastcgi_params;
 	# 	fastcgi_pass wordpress:9000;
