--- a/backend/userManagement/package.json
+++ b/backend/userManagement/package.json
@@ -17,6 +17,7 @@
     "fastify": "^5.3.3"
   },
   "devDependencies": {
-    "@types/better-sqlite3": "^7.6.13"
+    "@types/better-sqlite3": "^7.6.13",
+    "@types/node": "^24.0.3"
   }
 }
