--- a/backend/authentication/package.json
+++ b/backend/authentication/package.json
@@ -15,6 +15,7 @@
 		"@fastify/jwt": "^9.1.0",
 		"argon2": "^0.43.0",
 		"better-sqlite3": "^11.10.0",
+		"fastify": "^5.4.0",
 		"hi-base32": "^0.5.1",
 		"otpauth": "^9.4.0",
 		"qrcode": "^1.5.4",
@@ -22,7 +23,6 @@
 	},
 	"devDependencies": {
 		"@types/better-sqlite3": "^7.6.13",
-		"@types/qrcode": "^1.5.5",
-		"fastify": "^5.4.0"
+		"@types/qrcode": "^1.5.5"
 	}
 }
