--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,12 @@
 # modules
 node_modules/
 
-# database
+# databases
+database/
 *.sqlite3
 
-# folders
-dist/
-
-# container data
-data/
-
 # user uploads
-user/
-
-# environment
-.env
-
-# vscode extensions
-.vscode/
-
-# modules
-node_modules/
-
-# database
-*.sqlite3
-
-# folders
-dist/
-
-# container data
-data/
-
-# user uploads
-user/
+user_uploads/
 
 # environment
 .env
