--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     ports:
       - 8081:8080
     volumes:
-      - auth_data:/app/data
+      - auth_db:/app/data/database
     networks:
       - internal
     environment:
@@ -32,7 +32,8 @@ services:
     ports:
       - 8082:8080
     volumes:
-      - user_data:/app/data
+      - user_db:/app/data/database
+      - user_avatars:/app/data/avatars
     networks:
       - internal
     environment:
@@ -51,8 +52,6 @@ services:
       retries: 10
     ports:
       - 8443:443
-    volumes:
-      - user_avatars:/etc/nginx/html/public/assets/avatars/user
     networks:
       - internal
     environment:
@@ -64,23 +63,23 @@ networks:
     driver: bridge
 
 volumes:
-  auth_data:
+  auth_db:
     driver: local
     driver_opts:
       type: none
-      device: ./backend/authentication/data
+      device: ./backend/authentication/data/database
       o: bind
-  user_data:
+  user_db:
     driver: local
     driver_opts:
       type: none
-      device: ./backend/userManagement/data
+      device: ./backend/userManagement/data/database
       o: bind
   user_avatars:
     driver: local
     driver_opts:
       type: none
-      device: ./frontend/src/public/assets/avatars/user
+      device: ./backend/userManagement/data/avatars
       o: bind
 
     # Comment out to NOT have database and user uploads available on host TODO
