--- a/.gitignore
+++ b/.gitignore
@@ -19,23 +19,7 @@ user/
 # vscode extensions
 .vscode/
 
-# modules
-node_modules/
-
-# database
-*.sqlite3
-
-# folders
-dist/
-
-# container data
-data/
-
-# user uploads
-user/
-
-# environment
-.env
-
-# vscode extensions
-.vscode/
+# live server files
+output.css
+formHandlers.js
+selectView.js
