--- a/match_making/package.json
+++ b/match_making/package.json
@@ -6,7 +6,7 @@
     "build:backend": "tsc -p tsconfig.backend.json",
     "build": "npm run build:backend && npm run build:server",
     "test": "npm run build && npm run start",
-    "start": "node  ./dist/serv.js"
+    "start": "node  ./dist/server.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,11 +15,14 @@
     "@fastify/cookie": "^11.0.2",
     "@fastify/formbody": "^8.0.2",
     "@fastify/static": "^8.2.0",
-    "fastify": "^5.3.3",
-    "path": "^0.12.7"
+    "@fastify/websocket": "^11.1.0",
+    "fastify": "^5.4.0",
+    "path": "^0.12.7",
+    "ws": "^8.18.2"
   },
   "devDependencies": {
     "@types/node": "^24.0.3",
+    "@types/ws": "^8.18.1",
     "typescript": "^5.8.3"
   }
 }
