--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -21,8 +21,8 @@ server {
 		proxy_pass http://auth_service:8080/auth/;
 	}
 
-	location api/avatar/ {
-		proxy_pass http://user_service:8080/avatar/;
+	location /api/user/ {
+		proxy_pass http://user_service:8080/users/;
 	}
 
 	# location ~ \.php$ {
