--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -17,7 +17,7 @@ server {
 		try_files $uri $uri/ =404;
 	}
 
-	location /auth/ {
+	location /api/auth/ {
 		proxy_pass http://auth_service:8080/auth/;
 	}
 
