--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -21,6 +21,10 @@ server {
 		proxy_pass http://auth_service:8080/auth/;
 	}
 
+	location /api/users/ {
+		proxy_pass http://user_service:8080/users/;
+	}
+
 	# location ~ \.php$ {
 	# 	include fastcgi_params;
 	# 	fastcgi_pass wordpress:9000;
