--- a/match_making/tsconfig.server.json
+++ b/match_making/tsconfig.server.json
@@ -111,5 +111,5 @@
     "skipLibCheck": true,                                 /* Skip type checking all .d.ts files. */
 	"outDir": "./dist/"
 },
-"include": ["src/serv.ts"],
+"include": ["src/server.ts"],
 }
