--- a/backend/userManagement/package.json
+++ b/backend/userManagement/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@fastify/cookie": "^11.0.2",
     "@fastify/jwt": "^9.1.0",
+    "@fastify/multipart": "^9.0.3",
     "better-sqlite3": "^11.10.0",
     "fastify": "^5.4.0"
   },
