--- a/shared/pong/package.json
+++ b/shared/pong/package.json
@@ -1,14 +1,10 @@
 {
   "name": "pong",
-  "sideEffects": [
-    "./src/vector2.ts"
-  ],
+  "sideEffects": ["./src/vector2.ts"],
   "version": "1.0.0",
   "private": true,
   "description": "the pong game itself",
-  "keywords": [
-    "pong"
-  ],
+  "keywords": ["pong"],
   "license": "MIT",
   "author": "cat",
   "type": "module",
