--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -23,17 +23,12 @@ http {
         location / {
             root /usr/share/nginx/html;
             index index.html;
-            try_files $uri $uri/ @backend;
-        }
-
-        # Serve JavaScript & CSS correctly
-        location /assets/ {
-            root /usr/share/nginx/html;
+            try_files $uri $uri/ /index.html;
         }
 
         # API requests go to authentication service
-        location @backend {
-            proxy_pass http://authentication;
+        location /api/ {
+            proxy_pass http://authentication/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "Upgrade";
