--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,18 +2,21 @@
   "name": "frontend",
   "version": "1.0.0",
   "description": "the frontend part of transcendence",
-  "keywords": ["frontend"],
+  "keywords": [
+    "frontend"
+  ],
   "license": "MIT",
   "author": "cat",
   "type": "module",
-  "main": "index.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.1.11",
     "@types/node": "^24.0.1",
+    "tailwindcss": "^4.1.11",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3",
     "vite": "^6.3.5",
