integrate authe and user management services

--- a/backend/game/Dockerfile
+++ b/backend/game/Dockerfile
@@ -5,7 +5,7 @@ COPY package.json ./
 COPY package-lock.json ./
 COPY tsconfig.base.json ./
 COPY shared/pong ./shared/pong
-COPY services/game ./services/game
+COPY backend/game ./backend/game
 
 RUN npm install --omit=dev
 RUN npm install -w game
