--- a/backend/user_management/package.json
+++ b/backend/user_management/package.json
@@ -1,15 +1,20 @@
 {
-  "name": "usermanagement",
+  "name": "user_management",
   "version": "1.0.0",
-  "main": "server.js",
+  "description": "the user management service",
+  "keywords": [
+    "user",
+    "management",
+    "microservice"
+  ],
+  "license": "MIT",
+  "author": "oliver",
+  "type": "module",
+  "main": "index.js",
   "scripts": {
-    "start": "node dist/server.js",
-    "build": "tsc -p tsconfig.json",
+    "up": "npm exec tsx src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
     "@fastify/cookie": "^11.0.2",
     "@fastify/jwt": "^9.1.0",
@@ -19,6 +24,6 @@
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
-    "@types/node": "^24.0.3"
+    "@types/node": "^24.0.10"
   }
 }
