--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     restart: always
     build:
       context: ./
-      dockerfile: services/authentication/Dockerfile
+      dockerfile: backend/authentication/Dockerfile
     healthcheck:
       test: [ "CMD", "curl", "-f", "http://localhost:8080/auth/health" ]
       interval: 5s
@@ -34,7 +34,6 @@ services:
     networks:
       - internal
     environment:
-      - JWT_SECRET="Some secret"
       - NODE_ENV=development
       - USER_SERVICE_URL=http://user_service:8080/users
       - AUTH_DB_PATH=/app/data/database/auth_db.sqlite3
@@ -47,7 +46,7 @@ services:
     restart: always
     build:
       context: ./
-      dockerfile: services/routing/Dockerfile
+      dockerfile: backend/routing/Dockerfile
     networks:
       - internal
     healthcheck:
@@ -62,7 +61,9 @@ services:
   user_service:
     container_name: transcendence_user
     restart: always
-    build: ./backend/userManagement
+    build:
+      context: ./
+      dockerfile: backend/user_management/Dockerfile
     healthcheck:
       test: [ "CMD", "curl", "-f", "http://localhost:8080/users/health" ]
       interval: 5s
@@ -84,7 +85,7 @@ services:
     restart: always
     build:
       context: ./
-      dockerfile: services/matchmaking/Dockerfile
+      dockerfile: backend/matchmaking/Dockerfile
     networks:
       - internal
     healthcheck:
@@ -99,7 +100,7 @@ services:
     restart: always
     build:
       context: ./
-      dockerfile: services/game/Dockerfile
+      dockerfile: backend/game/Dockerfile
     networks:
       - internal
     healthcheck:
@@ -123,13 +124,13 @@ volumes:
     driver: local
     driver_opts:
       type: none
-      device: ./backend/userManagement/data/database
+      device: ./backend/user_management/data/database
       o: bind
   avatars:
     driver: local
     driver_opts:
       type: none
-      device: ./backend/userManagement/data/avatars
+      device: ./backend/user_management/data/avatars
       o: bind
 
     # Comment out to NOT have database and user uploads available on host TODO
