--- a/backend/authentication/Dockerfile
+++ b/backend/authentication/Dockerfile
@@ -4,6 +4,7 @@ WORKDIR /app
 COPY package.json ./
 COPY package-lock.json ./
 COPY tsconfig.base.json ./
+COPY shared/schemas ./shared/schemas
 COPY backend/authentication ./backend/authentication
 
 RUN npm install --omit=dev -w authentication
