--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -28,7 +28,7 @@ http {
 
         # API requests go to authentication service
         location /api/ {
-            proxy_pass http://auth_service:8080/;
+            proxy_pass http://auth_service/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "Upgrade";
