feat: use shared CredentialsSchema for registering, logging in and changing user info in authentication and user management services

--- a/backend/user_management/Dockerfile
+++ b/backend/user_management/Dockerfile
@@ -4,6 +4,7 @@ WORKDIR /app
 COPY package.json ./
 COPY package-lock.json ./
 COPY tsconfig.base.json ./
+COPY shared/schemas ./shared/schemas
 COPY backend/user_management ./backend/user_management
 
 RUN npm install --omit=dev
