working shooting game

--- a/backend/game/Dockerfile
+++ b/backend/game/Dockerfile
@@ -5,6 +5,7 @@ COPY package.json ./
 COPY package-lock.json ./
 COPY tsconfig.base.json ./
 COPY shared/pong ./shared/pong
+COPY shared/shooting ./shared/shooting
 COPY shared/schemas ./shared/schemas
 COPY backend/game ./backend/game
 
